@@ -13,6 +13,9 @@ Changes that could break older environments:
   javac to use a new compiler a lot easier but may break custom
   versions of this task that rely on the old implementation.
 
+* The output generated by the xml formatter for <junit> has changed a
+  little, it doesn't append " sec" in the time attribute anymore.
+
 Other changes:
 --------------
 
